--- a/MW5 Mod Oganizer WPF/App.config
+++ b/MW5 Mod Oganizer WPF/App.config
@@ -2,10 +2,22 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MW5_Mod_Organizer_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="MW5_Mod_Oganizer_WPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <MW5_Mod_Organizer_WPF.Properties.Settings>
+            <setting name="Path" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GameVersion" serializeAs="String">
+                <value>1.1.351</value>
+            </setting>
+            <setting name="SecondaryPath" serializeAs="String">
+                <value />
+            </setting>
+        </MW5_Mod_Organizer_WPF.Properties.Settings>
         <MW5_Mod_Oganizer_WPF.Properties.Settings>
             <setting name="Path" serializeAs="String">
                 <value />
