Application.Settings will now be reset when user opens application with different version number than saved in user.config

--- a/MW5 Mod Oganizer WPF/App.config
+++ b/MW5 Mod Oganizer WPF/App.config
@@ -17,6 +17,9 @@
             <setting name="SecondaryPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Version" serializeAs="String">
+                <value>2.0.0</value>
+            </setting>
         </MW5_Mod_Organizer_WPF.Properties.Settings>
         <MW5_Mod_Oganizer_WPF.Properties.Settings>
             <setting name="Path" serializeAs="String">
