--- a/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
+++ b/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>MW5_Mod_Organizer_WPF</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
@@ -43,7 +43,9 @@
 	  <None Remove="Images\favicon.ico" />
 	  <None Remove="Images\logo.png" />
 	  <None Remove="Images\logo2.png" />
+	  <None Remove="Images\WarningIcon.png" />
 	  <None Remove="logo2.png" />
+	  <None Remove="WarningIcon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -53,6 +55,7 @@
 	  <EmbeddedResource Include="Images\logo2.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </EmbeddedResource>
+	  <EmbeddedResource Include="Images\WarningIcon.png" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -91,6 +94,7 @@
   <ItemGroup>
     <Resource Include="favicon.ico" />
     <Resource Include="logo2.png" />
+    <Resource Include="WarningIcon.png" />
   </ItemGroup>
 
 </Project>
