--- a/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
+++ b/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
@@ -19,7 +19,7 @@
 		<Company />
 		<Authors>Maxim Agemans</Authors>
 		<AnalysisLevel>latest</AnalysisLevel>
-		<ApplicationIcon>Images\favicon.ico</ApplicationIcon>
+		<ApplicationIcon>Images\icon-ico.ico</ApplicationIcon>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
