Added info text about what profile is active

--- a/MW5 Mod Oganizer WPF/App.config
+++ b/MW5 Mod Oganizer WPF/App.config
@@ -20,6 +20,9 @@
             <setting name="Version" serializeAs="String">
                 <value>2.3.0</value>
             </setting>
+            <setting name="CurrentProfile" serializeAs="String">
+                <value />
+            </setting>
         </MW5_Mod_Organizer_WPF.Properties.Settings>
         <MW5_Mod_Oganizer_WPF.Properties.Settings>
             <setting name="Path" serializeAs="String">
