--- a/MW5 Mod Oganizer WPF/Properties/Settings.settings
+++ b/MW5 Mod Oganizer WPF/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="Version" Type="System.String" Scope="User">
       <Value Profile="(Default)">2.3.0</Value>
     </Setting>
+    <Setting Name="CurrentProfile" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
