--- a/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
+++ b/MW5 Mod Oganizer WPF/MW5 Mod Organizer.csproj
@@ -42,6 +42,7 @@
 
 	<ItemGroup>
 	  <None Remove="appsettings.json" />
+	  <None Remove="credits.json" />
 	  <None Remove="favicon.ico" />
 	  <None Remove="gear-gif.gif" />
 	  <None Remove="Images\favicon.ico" />
@@ -57,6 +58,7 @@
 	  <EmbeddedResource Include="appsettings.json">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </EmbeddedResource>
+	  <EmbeddedResource Include="credits.json" />
 	  <EmbeddedResource Include="Images\gear-gif.gif" />
 	  <EmbeddedResource Include="Images\logo2.png">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
