Added shared preference for receiving updates

--- a/MW5 Mod Oganizer WPF/App.config
+++ b/MW5 Mod Oganizer WPF/App.config
@@ -23,6 +23,9 @@
             <setting name="CurrentProfile" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ReceiveUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
         </MW5_Mod_Organizer_WPF.Properties.Settings>
     </userSettings>
 </configuration>
