--- a/MW5 Mod Oganizer WPF/Properties/Settings.settings
+++ b/MW5 Mod Oganizer WPF/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="CurrentProfile" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ReceiveUpdate" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
